# demo-docker

./: .dockerignore  .gitignore  Dockerfile  README.md  compose.yml  publish_docker.sh  pyproject.toml  test.py  train.py
model/: __init__.py  loader.py  net.py
